--- a/project/src/app/app.component.html
+++ b/project/src/app/app.component.html
@@ -3,5 +3,6 @@
 <!-- <app-all-posts></app-all-posts> -->
  <!-- <app-layout></app-layout> -->
  <!-- <app-layout></app-layout> -->
+ <span class="logotext">Blood Bank</span>
  <router-outlet>
 </router-outlet>
