--- a/project/src/app/component/profile/profile.component.css
+++ b/project/src/app/component/profile/profile.component.css
@@ -1,15 +1,3 @@
-/* 
-  .signup{
-    background-color:rgba(214, 213, 213,.5);
-    box-shadow:  7px 10px 5px rgb(151, 148, 148);
-    color:black;
-    font-weight: bold;
-    /* margin: auto; 
-    border-radius: 10px;
-    border: red;
-  font-size: 20px;
-  } */
-
 
   .valid{
     border: 1px solid red;
@@ -18,34 +6,46 @@
   input{
     border-radius:20px;
     border: 1px solid gray ;
-    height: 40px;
-    background-color: transparent;
-  padding:10px;
+    background-color:transparent;
+    font-size:20px;
+    flex-grow:3;
   }
   .profile{
-    height:80vh;
-    border-radius: 20px;
+  height:fit-content;
+    border-radius:20px;
     border:1px solid rgb(161, 161, 161);
-    background-color: transparent;
-
+    background-color:white;
   }
-  h3 div{
-    font-size: 25px;
+  ._div{
+    display: flex;
+    flex-wrap:wrap;
+    justify-content:space-around;
+   margin-top:25px;
   }
-  h6{
+ 
+  label{
+    flex-grow: 1;
     font-size:25px;
   }
   img{
     position: relative;
     border-radius: 50%;
-    width: 80px;
-    height: 80px;
-    top:-50px
+    width:80px;
+    height:80px;
+    top:-50px;
   }
   button{
+    font-size:20px;
     padding:10px;
     border-radius: 20px;
-    background-color: #4058e0;
-  margin-left:15px;
+    /* background-color:rgb(255, 115, 115); */
+  /* margin-left:15px; */
+  color:white;
   border:0 ;
+  }
+  .btndelete{
+    background-color:red;
+  }
+  .btnupdate{
+    background-color: rgb(15, 15, 248);
   }
