--- a/project/src/app/app.component.css
+++ b/project/src/app/app.component.css
@@ -1,17 +1,12 @@
-.bg{
+/* .bg{
   width: 100%;
   height:100%;
 background-image:url("../assets/images/bg.jpg");
 object-fit: cover;
 background-size: 100% 100%;
+} */
 
-}
 
-.leftside{
-  width: 200px;
-  /* background-color: brown; */
-  height: 100%vh;
-}
 /* *{
 background-color: gray;
 } */
