--- a/project/src/app/component/nav-aside/nav-aside.component.css
+++ b/project/src/app/component/nav-aside/nav-aside.component.css
@@ -3,12 +3,12 @@
 }
 aside{
   /* background-color:rgba(255, 255, 255, 0.308); */
-  background-color: white;
+  /* background-color: white; */
   /* color: gray; */
   margin-right: 0;
   height:100%;
   /* min-height:90vh; */
-  box-shadow: 5px 10px 5px rgb(128, 128, 128,.7);
+  box-shadow: 5px 10px 5px rgba(167, 147, 147, 0.7);
   box-sizing: border-box;
   overflow: hidden;
  /* height:inherit; */
@@ -22,20 +22,20 @@ aside{
 
 }
 .logotext{
+  position:relative;
+  top:-30px;
+  z-index: 10;
   font-size:40px;
-  color: red;
+  /* color: red; */
 display: inline-block;
 margin: auto;
    /* margin-top: 15px;
 padding-left: 10px; */
 font-family: 'Courgette', cursive;
 font-family: 'Style Script', cursive;
+
 }
-hr{
-  width:80%;
-  height: 1px;
-  background-color: gray;
-}
+
 
 ul{
   padding: 0;
@@ -46,76 +46,73 @@ ul{
 
 }
 li{
-  margin-top: 10px;
+  margin-top:10px;
   padding: 0;
   text-align:left;
-  display: flex;
-  justify-content:space-evenly;
+  display:flex;
+ 
   /* color: rgb(114, 111, 111); */
-width: 100%;
+width:100%;
 /* color: red; */
-
+min-height: fit-content;
 }
-i{
-  padding-right:20px;
+a i{
+  font-size:25px;
+  padding-right:17px;
 }
 li:hover a{
-  /* background-color:rgb(255, 0, 0,.7); */
-  background-color:var(--color1);
+ 
+/* background-color: rgb(63, 63, 250); */
   font-size:30px;
-  color:white!important;
-
+  /* color:white!important; */
+  font-weight:30px;
+background-color: white;
+color: blue;
 }
 a{
   margin: 0;
-  padding: 0;
   text-decoration: none;
   width:100%;
-  color:rgb(114, 111, 111);
+  color:white;
+
   font-weight:25px;
     padding:15px;
   height: 100%;
-  display: flex;
+  display:flex;
+  flex-wrap: wrap;
+  font-size:25px;
+  font-weight:30px;
 
 }
 .active{
-  background-color:var(--color1);
+  background-color:blue;
 
   /* background-color:red; */
-  color: white;
-  font-size:33px;
-
-}
-
-
-#contain_searsh{
-display: flex;
-/* width: fit-content; */
-  border-radius: 10px;
-
- 
-}
-#icone{
-  margin:0;
-  padding:0;
   color:white;
+  font-size:30px;
+
 }
+
+
+
+
 #icone i{
   color:white;
-}
+} 
 
 
 
 .inputSelect {
-  width: 0 ;
-  height: 0 ;
+  width:0;
+  height:0;
   display: inline-block;
 
   border-radius: 20px;
   transition: 2s 0s all ease-in-out;
   padding: 0;
   margin: 0;
-  border: 0;
+  border:1px solid gray;
+  /* padding-left:3px; */
   font-size:20px !important;
 
 }
@@ -127,9 +124,17 @@ display: flex;
 }
 .liSearch:hover .inputSelect{
   display:inline-block;
-  width:150px;
-  height:40px;
+  width:50px;
+  height:30px;
   
+
+}
+/* .liSearch:hover{
+  font-size: 25px;
+  padding:0;
+} */
+.ASearch{
+  width: fit-content;
 
 }
 
