--- a/project/src/app/component/navbar/navbar.component.css
+++ b/project/src/app/component/navbar/navbar.component.css
@@ -2,30 +2,40 @@
   overflow: hidden;
 }
 .navbg{
-  background-color: #ed6761;
+  /* background-color:#ed6761; */
+  /* background-color:#ff7871; */
   margin: 0;
   padding: 0;
 }
+
 a{
-  color:white;
+  /* color:white; */
+  /* color: gray; */
   text-decoration: none;
   margin: 10px;
   font-size: 20px;
 }
-a:hover{
-  font-size: 30px;
-}
+/* a:hover{
+  font-size:25px;
+  color:blue;
+} */
 .active{
   color: red;
   font-size: 20px;
 }
-/* .nav-item{
-  margin: 10px
-} */
-nav
-{
-  box-shadow: 0px 5px 7px rgb(204, 204, 204) ;
+._bell{
+  font-size:23px;
+  color:white;
 }
+#span_bell{
+  position: relative;
+  top:-10px;
+  font-size:15px;
+  color:white;
+}
+
+  /* box-shadow: 0px 5px 7px rgb(204, 204, 204) ; */
+
 .logo{
   width:100px;
  height:50px;
@@ -70,16 +80,18 @@ font-size: 20px;
   background-color: transparent;
 }
 .dropdown a, i{
-  color: black;
+  color:black;
 }
 .span_admin{
   font-size:25px;
-  display: inline-block;
-  background-color:rgb(7, 190, 251);
-  width: 40px;
-  height: 40px;
-  text-align: center;
+  display:inline-block;
+  background-color: white;
+  color:blue;
+  /* background-color:rgb(7, 190, 251); */
+  width:35px;
+  height:35px;
+  text-align:center;
   margin: 0;
-
   border-radius: 50%;
+  padding-bottom: 10px;
 }
