--- a/project/src/app/component/posts/all-posts/all-posts.component.css
+++ b/project/src/app/component/posts/all-posts/all-posts.component.css
@@ -1,23 +1,25 @@
-.asidleft{
-    height:100%;
-    width:100%;
 
-
-
+.containpost{
+    background-size: 100% 100%;
+    object-fit: fill;
+    /* background-image:url('../../../../assets/images/bgb.jpg'); */
 }
-
+._search{
+    height: fit-content;
+}
 
  ._card{
      background-color: white;
     border: 2px solid transparent;
     border-radius: 10px;
     /* margin: auto; */
-    box-shadow: 7px 10px 5px rgb(128, 128, 128,.7);
+
+    box-shadow: 7px 10px 5px rgba(167, 147, 147, 0.7);
 
 }
 .cardimg{
-    width: 60px;
-    height:60px;
+    width: 70px;
+    height:70px;
     border-radius:50%;
     margin: 10px;
     margin-right: 20px;
@@ -33,44 +35,67 @@ h6{
     font-size: 20px !important;
 }
 .ulpagination{
-    padding: 10px;
+    padding:7px;
     display: flex ;
     justify-content: space-evenly;
     border-radius:40px;
-    width:80%;
-background-color: transparent;
-    box-shadow: 10px 7px 5 rgb(94, 92, 92);
+    min-width:40%;
+background-color:rgb(216, 216, 216);
+height: fit-content;
+
+/* box-shadow: 5px 5px 5px gray; */
+
+    /* box-shadow: 10px 7px 5 rgb(94, 92, 92); */
 }
 .ulpagination button{
-    width: 50px;
-    height: 50px;
-    border-radius: 50%; 
-    background-color: white;
+    width:30px;
+    height:30px;
+    /* border: 2px solid blue; */
+    /* border-radius:50%;  */
+    /* background-color: white; */
+    background-color: transparent;
     color: blue;
-    border:0 ;
+    border: 0;
+    margin-left:10px ;
+    font-size:20px;
 
 }
 .btnblue{
-    border: tomato !important;
-    border-radius: 50% solid white !important;
+    border-radius:50% ;
+    /* solid white !important; */
     background-color: blue !important;
     color :white !important;
+    width:40px;
 }
 .divbtn{
-    /* border:1px solid gray; */
     display: flex;
-    /* justify-content:flex-end; */
-    /* align-items: center; */
 }
+    
 .divbtn button{
-    border-radius: 20px;
+    border-radius:15px;
         border:1px solid white;
-        font-size: 20px;
-        background-color:var(--color1);
+        font-size:20px;
 color: white;
 
 
 }
+.btn_d{
+        /* background-color:var(--color1); */
+background-color: rgb(255, 76, 76);
+margin-left: 25px;
+}
+.btn_info{
+    background-color: rgb(42, 42, 255);
+}
 ._filter{
     background-color: #ccc;
 }
+.btn_next ,.btn_pre{
+    border-radius: 50%;
+    width:40px;
+    height:40px;
+    border: 0;
+    background-color:rgb(216, 216, 216);
+    color: blue;
+
+} 
