--- a/project/src/app/component/user-details/user-details.component.html
+++ b/project/src/app/component/user-details/user-details.component.html
@@ -1,11 +1,14 @@
   <navbar class="sticky-top navtop container-fluid m-0 p-0"></navbar>
   <div class="container-fluid row m-0 p-0 contain bg-img cover ">
+    <div class="container-fluid row m-0 p-0 _contain"
+    [ngClass]="{'bg_black':!ourserve.mood}"
+    ></div>
 <app-nav-aside class="col-2 p-0 "></app-nav-aside>
 <div class=" col-8 mx-auto">
-  <h4 class=" text-center w-75 mx-auto  my-5">result type blood
+  <h4 class=" text-center w-75 mx-auto  my-5">Users with Type Blood
     <span class="text-primary pt-3">{{type}}</span>
   </h4 >
-  <table  class="table table-hover">
+  <table  class="table table-hover bgtable">
     
     <thead>
     <tr>
