--- a/project/src/app/component/user-info/user-info.component.html
+++ b/project/src/app/component/user-info/user-info.component.html
@@ -1,12 +1,15 @@
 <navbar class="container-fluid p-0 m-0 "></navbar>
     <div class="container-fluid row m-0 p-0   d-flex justify-content-between contain">
-  <div class=" container-fluid row m-0 p-0  _contain"></div>
-      <app-nav-aside class="col-3 p-0 "></app-nav-aside>
- 
-  <div class=" col-4 mt-5 mr-5 ">
+  <div class=" container-fluid row m-0 p-0  _contain"
+  [ngClass]="{'bg_black':!ourserve.mood}"
+  ></div>
+      <app-nav-aside class="col-2 p-0 "></app-nav-aside>
 
-     <div *ngFor="let p of posts">
-         <div class="_card_post  mt-2 p-2">
+  <div class=" col-4 mt-5 mr-5 " *ngIf="posts">
+    <!-- <div *ngIf="posts"> -->
+
+     <div  *ngFor="let p of posts ; index as i">
+         <div class="_card_post  mt-4 p-2">
             <div class="row p-0 m-0">
               <div class="col-12 top_card p-0 m-0 ">
               <!-- <img class="cardimg " src={{p.user_imgURL}} alt="Card image cap"/> -->
@@ -23,10 +26,12 @@
               {{p.city}}</h6>
             <h6>
               <span>donatin Date :</span>
-              {{p.donDate}}</h6>
+              {{p.donDate.split(' ')[0]}}</h6>
+              <h6 *ngIf="p.details" ><span>details : </span>{{p.details}}</h6>
+
               
               <div class=" p-0 pb-2 divbtn row">
-                 <!--{{p.userID}}  -->
+                <button class="btn btn-danger" (click)="deletpost(p.key ,i)">delete post</button>
               </div> 
               
           </div>
@@ -34,19 +39,27 @@
         </div>
       </div>
     </div>
+    <button class="btn btn-info" 
+    [hidden]="ourserve.btn_deletrepo"
+    (click)="deleterepo()"
+    >delete repo</button>
   </div>
   <div class="col-3">
-    <div class="_Card p-3 mt-5">
+    <div class="_Card p-3 mt-5" *ngIf="userinfo">
                   <img src={{userinfo.user_imgURL}} class="imgcard mx-auto">
       <!-- <img src={{userinfo.user_imgURL}}> -->
       
-     <h6><span>First name:</span> {{userinfo.firstName}}</h6>
-     <h6><span>Second name:</span> {{userinfo.secondName}}</h6> 
+     <h6><span>First name :</span> {{userinfo.firstName}}</h6>
+     <h6><span>Second name :</span> {{userinfo.secondName}}</h6> 
     <h6> <span>Blood type :</span>{{userinfo.blood_type}}</h6>
     <h6> <span>Email : </span>{{userinfo.email}}</h6>
-    <h6> <span>Phone</span>{{userinfo.phone}}</h6> 
+    <h6> <span>Phone :</span>{{userinfo.phone}}</h6>
+    <div class="m-0 p-0  text-left">
+      <button class=" btn btn-info" (click)="deleteuser()">Delete user</button></div>
+
 
   </div>
+ 
 </div>
   </div>
   <!-- </div> -->
