--- a/project/src/app/component/users/users.component.css
+++ b/project/src/app/component/users/users.component.css
@@ -1,5 +1,14 @@
-.navaside{
-  height:100vh;
+/* .navaside{
+  height:95vh;
+} */
+*:root{
+  box-sizing: border-box;
+}
+._btn-search{
+  background-color: rgb(111, 111, 255);
+  color: white;
+  font-size:18px;
+
 }
 ._card{
   width:100%;
@@ -12,24 +21,29 @@ box-sizing: border-box;
   padding: 10px;
   overflow: hidden;
   align-items: center;
-  border:2px solid violet;
+  /* border:2px solid violet; */
 }
 ._card h6{
   color:white;
 }
+._table{
+  border-radius:20px;
+  /* background-color: rgb(255, 155, 255); */
+
+}
 .bgtable{
   padding: 10px;
   /* background-color: rgb(212, 212, 255); */
-  background-color: white;
-
+  background-color:white;
   margin: 0;
   overflow: hidden;
-  box-sizing: border-box;
-  border-radius: 20px;
+  box-sizing:border-box;
+  border-radius:20px;
   /* border: 2px solid rgb(91, 54, 255); */
   /* box-shadow: 10px 7px 5px rgb(161, 160, 160);  */
-  box-shadow: 7px 10px 5px rgb(128, 128, 128,.7);
-
+  /* background-color: rgb(255, 155, 255); */
+  box-shadow: 7px 10px 5px rgba(167, 147, 147, 0.7);
+height: min-content;
 }
 .htable{
   /* background-color:black;
@@ -38,6 +52,13 @@ box-sizing: border-box;
   margin: 0;
 }
 .bg_filter{
+  align-items: baseline;
   background-color:transparent;
-  border-radius: 15px;
+  border-radius:15px;
+  height:50px;
+}
+._btn{
+  /* background-color: rgb(255, 155, 255); */
+  background-color: rgb(138, 138, 246);
+  color: white;
 }
