--- a/project/src/app/components/sign-in/sign-in.component.html
+++ b/project/src/app/components/sign-in/sign-in.component.html
@@ -12,7 +12,7 @@
         >
       </div> -->
 
-      <div class="form-group ">
+      <div class="form-group  mt-2">
         <label for="exampleInputEmail1">Email address</label>
         <!-- <i class="fas fa-envelope"></i> -->
 
@@ -52,7 +52,7 @@
      
 
     <div class="row  btns mt-5">
-      <button  class="btn btn-primary mt-xl-0 mt-2" (click)="authService.SignIn( inputmail.value, pass.value)">
+      <button  class="btn btn-primary mt-xl-0 mx-auto btn_sub px-2" (click)="authService.SignIn( inputmail.value, pass.value)">
         submit
       </button>
     
