--- a/project/src/app/components/sign-up/sign-up.component.html
+++ b/project/src/app/components/sign-up/sign-up.component.html
@@ -6,13 +6,12 @@
       <div class="form-group">
         <label for="name">your name</label>
         <input type="text" class="form-control" id="name" aria-describedby="emailHelp" placeholder="Enter Name"
-        formControlName="name" #inputname  [ngClass]="{'valid':!NameValid}">
+        formControlName="name" #inputname  [ngClass]="{'valid':!NameValid}"   pattern="[a-zA-Z ]*">
       </div>
       <div class="form-group">
         <label for="exampleInputEmail1">Email address</label>
         <input type="email" formControlName="email" class="form-control" #inputmail [ngClass]="{'valid':!EmailValid}"
         id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-        <small id="emailHelp" class="form-text text-danger ">We'll never share your email with anyone else.</small>
       </div>
       <div class="form-group">
         <label for="exampleInputPassword1">Password</label>
@@ -20,8 +19,11 @@
           placeholder="Password" #pass [ngClass]="{'valid':!passValid}">
       </div>
 
-
-      <input type="submit" #submit (click)="authService.SignUp(inputmail.value, pass.value,inputname.value)">
+<div  class="form-group  row ">
+      <input type="submit" class=" btn mx-auto btn-sub btn-primary"
+       #submit (click)='onsubmit(inputmail.value, pass.value,inputname.value)'
+        [disabled]='!ourValidation.valid'>
+      </div>
     </form>
   </div>
 </div>
