--- a/project/src/styles.css
+++ b/project/src/styles.css
@@ -1,31 +1,81 @@
 :root{--color1:#ed6761;
 --colorbg:rgb(255, 229, 229);
+--shadow:5px 5px 5px rgb(151, 148, 148);
 }
 .bg_black{
-  background-color:black !important;
+  /* background-color:black!important; */
+  background-color:#303030!important;;
+  /* background-color:#535353!important;; */
+
   box-shadow: 5px 10px 5px white;
   /* color: white !important; */
 }
 .bg_white{
-  background-color:white ;
+  background-color:white;
   box-shadow: 5px 10px 5px black;
 /* color: black; */
 }
 .contain{
   position:relative;
-  min-height:95vh;
+  min-height:90vh;
 }
 ._contain{
   position:absolute;
   width:100%;
-  height:100%;
-  background-color: whitesmoke;
+  min-height:100%;
+  background-color:whitesmoke;
+  /* background-color:#acc8fb; */
   /* background-color: rgb(151, 176, 255); */
    /* background-color:rgb(255, 229, 229); */
-   /* background-image: url("./assets/images/bg5.jpg"); */
+     /* background-image: url("./assets/images/bg.jpg");  */
    background-size: 100% 100%;
-   background-position:100% 100%; 
+   background-position:35vh; 
+   background-repeat:no-repeat; 
    object-fit:fill;
-   opacity:.7
+   /* opacity:.7; */
   ;
+}
+._border{
+  border: 1px solid black;
+}
+.arr{
+  display: flex;
+  align-items: center;
+}
+.arr button{
+  display: block;
+  border: 0;
+  font-size: 20px;
+  color: gray;
+  
+}
+._bgnav{
+  /* background-color:rgb(0, 0, 255,.5); */
+  background-color:#1976d2;
+  /* #1464FC; */
+
+  color:white;
+}
+.logotext{
+  position:absolute;
+  padding:15px;
+  margin-left: 10px;
+  color: white;
+  z-index:10;
+  width: fit-content;
+  /* margin-top:20px;
+  padding-top:20px; */
+  padding-left:10px; 
+  font-size:40px;
+display: inline-block;
+font-family: 'Courgette', cursive;
+font-family: 'Style Script', cursive;
+
+}
+._btn-search{
+  background-color: rgb(111, 111, 255);
+  color: white;
+  font-size:18px;
+  height:40px;
+
 }
