--- a/project/src/app/component/users/users.component.css
+++ b/project/src/app/component/users/users.component.css
@@ -62,3 +62,7 @@ height: min-content;
   background-color: rgb(138, 138, 246);
   color: white;
 }
+._disable{
+  background-color: gray;
+  color: white;
+}
