--- a/project/src/app/components/sign-in/sign-in.component.html
+++ b/project/src/app/components/sign-in/sign-in.component.html
@@ -1,8 +1,8 @@
 <div class="container-fluid bgImg  bg_g p-5 m-0 ">
-  <div class="login  w-70 mx-auto p-5  ">
+  <div class="login   mx-auto w-50 p-5  ">
     <form class="mx-auto w-70 my-auto  py-auto "  [formGroup]="ourValidation">
 
-      <h3>Sign In</h3>
+      <h3 class="text-center">Sign In</h3>
       <!-- <div class="formGroup mb-2">
         <label for="Input_name "  class="d-block mr-5 pr-5"> user Name</label>
         <input type="text" class="formControl w-100 "  #userName 
@@ -21,7 +21,7 @@
                  [ngClass]="{'valid':!EmailValid}"
 
         id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-        <small id="emailHelp" class="form-text text-danger ">We'll never share your email with anyone else.</small>
+
       </div>
 
       <div class="form-group ">
@@ -52,7 +52,7 @@
      
 
     <div class="row  btns mt-5">
-      <button  class="btn btn-primary mt-xl-0 mx-auto btn_sub px-2" (click)="authService.SignIn( inputmail.value, pass.value)">
+      <button  class="btn btn-primary mt-xl-0 mx-auto btn_sub px-2" (click)="submitlogin( inputmail.value, pass.value)">
         submit
       </button>
     
